--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_sorting.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_sorting.scss
@@ -1,19 +1,23 @@
 .storage-sorting {
     position: sticky;
-    margin: 9990px;
-    top: 10px;
+
+    top: 15px;
     width: 90%;
     height: 100px;
-    margin: 0 auto;
+    margin: 32px auto;
     padding: 0.8rem;
     background-color: #fbf9f9;
     z-index: 3;
     box-shadow: 0px 0px 25px black;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 
     & .sorting-layoutToggler {
+        float: left;
         cursor: pointer;
-        width: 46px;
-        height: 46px;
+        width: 50px;
+        height: 50px;
         background-color: var(--dark-blue);
         border-radius: 5px;
         &:hover {
@@ -32,11 +36,11 @@
             justify-content: space-between;
             align-items: center;
             flex-direction: column;
-            padding: 4px 0;
+            padding: 8px 0;
 
             & span {
-                width: 88%;
-                height: 19%;
+                width: 80%;
+                height: 15%;
                 border-radius: 6px;
             }
         }
@@ -52,6 +56,31 @@
                 width: 80%;
                 height: 80%;
                 border-radius: 23%;
+            }
+        }
+    }
+
+    & .toggleDropdowns {
+        width: 50px;
+        height: 50px;
+        border-radius: 5px;
+        background-color: var(--dark-blue);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        cursor: pointer;
+
+        & span {
+            width: 70%;
+            height: 11%;
+            background-color: var(--off-red);
+            display: block;
+            position: absolute;
+            border-radius: 12px;
+
+            &:nth-child(2) {
+                transform: rotate(90deg);
             }
         }
     }
