--- a/stash/src/components/stashesOverview/stashesOverview.scss
+++ b/stash/src/components/stashesOverview/stashesOverview.scss
@@ -4,4 +4,5 @@
     @import './sidebar/sidebar';
     @import './stashesOverview-components//StOv-storage/stashstorage';
     @import './stashesOverview-components//StOv-stashes/stashstashes';
+    @import './stashesOverview-components/StOv-analytics/StashAnalytics';
 }
