--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -52,20 +52,23 @@
 }
 .stashesOverview .stashstorage .storage-sorting {
   position: sticky;
-  margin: 9990px;
-  top: 10px;
+  top: 15px;
   width: 90%;
   height: 100px;
-  margin: 0 auto;
+  margin: 32px auto;
   padding: 0.8rem;
   background-color: #fbf9f9;
   z-index: 3;
   box-shadow: 0px 0px 25px black;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .stashesOverview .stashstorage .storage-sorting .sorting-layoutToggler {
+  float: left;
   cursor: pointer;
-  width: 46px;
-  height: 46px;
+  width: 50px;
+  height: 50px;
   background-color: var(--dark-blue);
   border-radius: 5px;
 }
@@ -83,11 +86,11 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  padding: 4px 0;
+  padding: 8px 0;
 }
 .stashesOverview .stashstorage .storage-sorting .sorting-layoutToggler.sorting-rowLayout span {
-  width: 88%;
-  height: 19%;
+  width: 80%;
+  height: 15%;
   border-radius: 6px;
 }
 .stashesOverview .stashstorage .storage-sorting .sorting-layoutToggler.sorting-cardLayout {
@@ -101,6 +104,28 @@
   width: 80%;
   height: 80%;
   border-radius: 23%;
+}
+.stashesOverview .stashstorage .storage-sorting .toggleDropdowns {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  background-color: var(--dark-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+.stashesOverview .stashstorage .storage-sorting .toggleDropdowns span {
+  width: 70%;
+  height: 11%;
+  background-color: var(--off-red);
+  display: block;
+  position: absolute;
+  border-radius: 12px;
+}
+.stashesOverview .stashstorage .storage-sorting .toggleDropdowns span:nth-child(2) {
+  transform: rotate(90deg);
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout {
   display: grid;
@@ -222,7 +247,7 @@
   z-index: -999;
   background-color: orchid;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem input:checked ~ .storageitem-conatiner {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem input:checked ~ .storageitem-container {
   transform: translate(-50%, 0);
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem label {
@@ -233,20 +258,20 @@
   cursor: pointer;
   background-color: transparent;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container {
   width: 200%;
   transform: translate(0, 0);
   transition: transform 400ms;
-  height: 140%;
+  height: 100%;
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall {
   padding: 10px 0px;
   height: 460px;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall .storageitem-image {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-image {
   width: 93%;
   margin: 0 auto;
   height: 215px;
@@ -254,7 +279,7 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall .storageitem-info {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info {
   box-sizing: border-box;
   margin-top: 5px;
   height: 225px;
@@ -266,30 +291,30 @@
   grid-template-columns: 1fr;
   align-content: space-between;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall .storageitem-info div {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div {
   line-height: 1em;
   word-wrap: break-word;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall .storageitem-info div h6 {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div h6 {
   font-weight: 100;
   font-size: 0.9rem;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall .storageitem-info div h3 {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div h3 {
   font-size: 1.3rem;
   font-weight: 300;
   color: var(--off-red);
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall .storageitem-info div p {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div p {
   font-weight: 300;
   font-size: 1.2rem;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall .storageitem-info div:nth-child(2) {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div:nth-child(2) {
   align-self: center;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-overhall .storageitem-info div:nth-child(3) {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div:nth-child(3) {
   align-self: flex-end;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-conatiner .storageitem-dropdown {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-dropdown {
   width: 100%;
   height: 100%;
   background-color: blue;
@@ -318,6 +343,75 @@
 .stashesOverview .stashesContainer .currentStashes .stashcard {
   margin: 10px 5px;
 }
+.stashesOverview .dashboard {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--dark-blue-light);
+  overflow-y: scroll;
+}
+.stashesOverview .dashboard .quickShowContainer {
+  width: 95%;
+  margin: 42px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.stashesOverview .dashboard .quickShowContainer .quickShowItem {
+  width: 31%;
+  height: 140px;
+  background-color: var(--dark-blue);
+  box-shadow: 1px 1px 10px #131313;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: var(--font-display);
+}
+.stashesOverview .dashboard .quickShowContainer .quickShowItem .quickShowItem-text h4 {
+  font-weight: 600;
+  color: var(--analytics-text-color);
+  font-size: 1.2rem;
+}
+.stashesOverview .dashboard .quickShowContainer .quickShowItem .quickShowItem-text p {
+  color: var(--analytics-text-color);
+  opacity: 0.7;
+  font-size: 1rem;
+}
+.stashesOverview .dashboard .quickShowContainer .quickShowItem .quickShowItem-icon {
+  width: 75px;
+  height: 75px;
+  display: grid;
+  border-radius: 50%;
+  border: solid 1px var(--off-red);
+  place-items: center;
+}
+.stashesOverview .dashboard .quickShowContainer .quickShowItem .quickShowItem-icon svg {
+  width: auto;
+  height: 50%;
+  color: var(--off-red);
+}
+.stashesOverview .dashboard .quickShowContainer .quickShowItem .quickShowItem-graph {
+  padding-left: 5px;
+  display: grid;
+  place-items: center;
+  font-family: var(--font-display);
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #30ee00;
+  border-left: solid 1px #30ee00;
+}
+.stashesOverview .dashboard .quickShowContainer .quickShowItem .red {
+  color: #ee0000;
+  border-left: solid 1px #ee0000;
+}
+.stashesOverview .dashboard .analytics-graph {
+  width: 95%;
+  height: 400px;
+  margin: 0 auto;
+  background-color: var(--dark-blue);
+  position: relative;
+  color: #ff00002d;
+}
 
 *,
 *::after,
@@ -326,16 +420,18 @@
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-family: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
   text-decoration: none;
 }
 
 :root {
-  --main-white: #ffeddf;
-  --dark-blue: #0d1321;
-  --off-red: #c5d86d;
+  --main-white: #ffbc2c;
+  --dark-blue: #232538;
+  --dark-blue-light: #26273d;
+  --off-red: #6c66fb;
+  --analytics-text-color: white;
   --font-logo: "Titan One", cursive;
   --font-display: "Lato", sans-serif;
 }
