--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-analytics/StashAnalytics.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-analytics/StashAnalytics.scss
@@ -4,6 +4,22 @@
     background-color: var(--dark-blue-light);
     overflow-y: scroll;
 
+    & .analyticsheader {
+        width: 100%;
+        background-color: var(--dark-blue);
+        padding: 30px 32px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-family: var(--font-display);
+
+        & h2 {
+            font-size: 2.1rem;
+            font-weight: 300;
+            color: var(--analytics-text-color);
+        }
+    }
+
     & .quickShowContainer {
         width: 95%;
         margin: 42px auto;
@@ -15,8 +31,9 @@
         & .quickShowItem {
             width: 31%;
             height: 140px;
+            color: var(--analytics-text-color);
             background-color: var(--dark-blue);
-            box-shadow: 1px 1px 10px rgb(19, 19, 19);
+            box-shadow: 1px 1px 10px rgb(24, 24, 24);
             display: flex;
             justify-content: space-evenly;
             align-items: center;
@@ -25,13 +42,13 @@
             & .quickShowItem-text {
                 & h4 {
                     font-weight: 600;
-                    color: var(--analytics-text-color);
                     font-size: 1.2rem;
+                    color: inherit;
                 }
                 & p {
-                    color: var(--analytics-text-color);
                     opacity: 0.7;
                     font-size: 1rem;
+                    color: inherit;
                 }
             }
 
@@ -47,9 +64,28 @@
                     width: auto;
                     height: 50%;
                     color: var(--off-red);
+                    &:nth-child(2) {
+                        color: #45ffff;
+                    }
                 }
             }
 
+            &:nth-child(2) {
+                & .quickShowItem-icon {
+                    border-color: #45ffff;
+                    & svg {
+                        color: #45ffff;
+                    }
+                }
+            }
+            &:nth-child(3) {
+                & .quickShowItem-icon {
+                    border-color: #ff23f0;
+                    & svg {
+                        color: #ff23f0;
+                    }
+                }
+            }
             & .quickShowItem-graph {
                 padding-left: 5px;
                 display: grid;
@@ -75,5 +111,6 @@
         background-color: var(--dark-blue);
         position: relative;
         color: #ff00002d;
+        box-shadow: 0px 0px 8px #070707;
     }
 }
