--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
@@ -117,6 +117,15 @@
         }
     }
 
+    //
+    //
+    //
+    //
+    // Card Layout
+    //
+    //
+    //
+    //
     &.storage-container-cardsLayout {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
