--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -227,19 +227,42 @@
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: repeat(auto-fit);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(auto-fit, 1f);
   place-items: center;
   padding: 10px;
   row-gap: 1em;
   column-gap: 1em;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem {
-  width: 97%;
+  width: 100%;
+  height: 410px;
   overflow: hidden;
-  height: 100%;
   position: relative;
-  background: var(--dark-blue);
+}
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-customizeIcon {
+  position: absolute;
+  width: 42px;
+  height: 42px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  border: solid 1px black;
+  display: grid;
+  place-items: center;
+  transition: 400ms;
+  cursor: pointer;
+}
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-customizeIcon svg {
+  height: 100%;
+  transition: 400ms;
+  color: black;
+}
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-customizeIcon:hover {
+  border: solid 1px var(--off-red);
+}
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-customizeIcon:hover svg {
+  color: var(--off-red);
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem input {
   cursor: cell;
@@ -268,51 +291,37 @@
   grid-template-columns: 1fr 1fr;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall {
-  padding: 10px 0px;
-  height: 460px;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-image {
-  width: 93%;
-  margin: 0 auto;
-  height: 215px;
+  display: block;
+  height: 280px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info {
-  box-sizing: border-box;
-  margin-top: 5px;
-  height: 225px;
-  color: white;
+  padding: 6px 0px 0px 10px;
+  color: black;
   font-family: var(--font-display);
-  font-size: 1.4rem;
-  padding: 0.2rem 0.6rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  align-content: space-between;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div {
-  line-height: 1em;
-  word-wrap: break-word;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div h6 {
-  font-weight: 100;
-  font-size: 0.9rem;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div h3 {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info h3 {
   font-size: 1.3rem;
   font-weight: 300;
-  color: var(--off-red);
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div p {
-  font-weight: 300;
-  font-size: 1.2rem;
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info span {
+  opacity: 0.8;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div:nth-child(2) {
-  align-self: center;
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info span h6 {
+  font-size: 1rem;
+  font-weight: 200;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info div:nth-child(3) {
-  align-self: flex-end;
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info span p {
+  font-weight: 200;
+  font-size: 0.9rem;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-dropdown {
   width: 100%;
@@ -467,7 +476,7 @@
 
 body {
   height: 100vh;
-  background-color: var(--main-white);
+  background-color: white;
   overflow: hidden;
 }
 body .loadingspinner {
@@ -488,8 +497,8 @@ body .loadingspinner p {
 }
 body .loadingspinner-spinner {
   position: absolute;
-  width: 221px;
-  height: 221px;
+  width: 351px;
+  height: 351px;
   padding: 10px;
   z-index: 33030;
 }
@@ -499,7 +508,7 @@ body .loadingspinner-spinner .circle-line {
   box-sizing: border-box;
   position: absolute;
   border-radius: 100%;
-  animation: rotate180 2s infinite;
+  animation: rotate180 2000ms infinite;
   border: 5px solid transparent;
   border-top-color: var(--off-red);
 }
@@ -515,28 +524,28 @@ body .loadingspinner-spinner .circle-line:nth-child(2) {
   top: 10%;
   width: 80%;
   height: 80%;
-  animation-delay: 0.5s;
+  animation-delay: 0.4s;
 }
 body .loadingspinner-spinner .circle-line:nth-child(3) {
   left: 20%;
   top: 20%;
   width: 60%;
   height: 60%;
-  animation-delay: 1s;
+  animation-delay: 0.8s;
 }
 body .loadingspinner-spinner .circle-line:nth-child(4) {
   left: 30%;
   top: 30%;
   width: 40%;
   height: 40%;
-  animation-delay: 1.5s;
+  animation-delay: 1.2s;
 }
 body .loadingspinner-spinner .circle-line:nth-child(5) {
   left: 40%;
   top: 40%;
   width: 20%;
   height: 20%;
-  animation-delay: 2s;
+  animation-delay: 1.6s;
 }
 @keyframes rotate180 {
   0% {
