--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
@@ -1,120 +1,6 @@
 .storage-itemsContainer {
     &.storage-container-rowsLayout {
-        display: grid;
-        padding: 15px;
-        grid-template-columns: 1fr;
-        place-items: center;
-        row-gap: 0.2em !important;
-        width: 100%;
-        margin: 0 auto;
-
-        & .storageitem {
-            width: 98%;
-            position: relative;
-
-            & input {
-                position: absolute;
-                z-index: -1;
-
-                &:checked {
-                    ~ .storageitem-dropdown {
-                        // making the box slide down
-                        height: 500px;
-                    }
-
-                    ~ .storageitem-overhall {
-                        border-left: solid 4px var(--off-red);
-                    }
-                }
-            }
-
-            & label {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                cursor: pointer;
-                // background: rgba(255, 0, 0, 0.397);
-            }
-            & .storageitem-overhall {
-                cursor: pointer;
-                padding: 0.3rem 1.2rem;
-                min-height: 110px;
-                background: var(--dark-blue);
-                display: grid;
-                grid-template-columns: auto 1fr;
-                align-items: center;
-
-                & .storageitem-image {
-                    width: 195px;
-                    height: 95%;
-                    background-position: center;
-                    background-size: cover;
-                    background-repeat: no-repeat;
-                }
-
-                & .storageitem-info {
-                    box-sizing: border-box;
-                    width: 95%;
-                    place-self: center;
-                    color: white;
-                    font-family: var(--font-display);
-                    font-size: 1.4rem;
-
-                    display: grid;
-                    grid-template-columns: repeat(3, minmax(100px, 1fr));
-
-                    & div {
-                        padding: 0.1rem 0.4rem;
-                        line-height: 1.2em;
-                        border-left: solid var(--off-red) 1px;
-                        word-wrap: break-word;
-                        // background: linear-gradient(0deg, blue, green);
-
-                        & h6 {
-                            font-weight: 100;
-                            font-size: 1rem;
-                        }
-                        & h3 {
-                            font-size: 1.5rem;
-                            font-weight: 300;
-                            color: var(--off-red);
-                        }
-
-                        & p {
-                            padding: 2px 0;
-                            font-weight: 300;
-                            font-size: 1.4rem;
-                        }
-                    }
-                }
-            }
-
-            .storageitem-dropdown {
-                // border-top: solid 1px rgb(158, 18, 18);
-                background: var(--dark-blue);
-                height: 0px;
-                transition: height 400ms;
-                overflow: hidden;
-                padding: 0 1.5rem;
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-                &-image {
-                    width: 330px;
-                    height: 450px;
-                    background-size: cover;
-                    background-repeat: no-repeat;
-                    background-position: center;
-                }
-
-                &-info {
-                    width: 50%;
-                    height: 350px;
-                    background: blue;
-                    color: white;
-                }
-            }
-        }
+        height: auto;
     }
 
     //
@@ -129,121 +15,27 @@
     &.storage-container-cardsLayout {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(auto-fit, 1f);
+        grid-template-rows: repeat(auto-fit, 1fr);
         place-items: center;
-        padding: 10px;
+        padding: 10px 20px;
         row-gap: 1em;
         column-gap: 1em;
         & .storageitem {
+            background-color: blue;
             width: 100%;
-            height: 410px;
-            overflow: hidden;
+            height: 360px;
             position: relative;
 
-            & .storageitem-customizeIcon {
+            // heart icon in the top rigth corner
+            & .hearticon {
+                width: 30px;
+                height: 30px;
+                background-color: green;
                 position: absolute;
-                width: 42px;
-                height: 42px;
-                right: 5px;
-                bottom: 5px;
-                border-radius: 50%;
-                border: solid 1px black;
+                top: 7px;
+                right: 7px;
                 display: grid;
                 place-items: center;
-                transition: 400ms;
-                cursor: pointer;
-
-                & svg {
-                    height: 100%;
-                    transition: 400ms;
-                    color: black;
-                }
-
-                &:hover {
-                    border: solid 1px var(--off-red);
-
-                    & svg {
-                        color: var(--off-red);
-                    }
-                }
-            }
-
-            & input {
-                cursor: cell;
-                position: absolute;
-                z-index: -999;
-                background-color: orchid;
-
-                &:checked {
-                    ~ .storageitem-container {
-                        transform: translate(-50%, 0);
-                    }
-                }
-            }
-
-            & label {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                z-index: 2;
-                cursor: pointer;
-                background-color: transparent;
-                // background: rgba(255, 0, 0, 0.397);
-            }
-
-            & .storageitem-container {
-                width: 200%;
-                transform: translate(0, 0);
-                transition: transform 400ms;
-                height: 100%;
-                position: relative;
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                & .storageitem-overhall {
-                    height: 100%;
-                    display: grid;
-                    grid-template-columns: 1fr;
-                    grid-template-rows: auto 1fr;
-
-                    & .storageitem-image {
-                        display: block;
-                        height: 280px;
-
-                        background-position: center;
-                        background-size: cover;
-                        background-repeat: no-repeat;
-                    }
-
-                    & .storageitem-info {
-                        padding: 6px 0px 0px 10px;
-                        color: black;
-                        font-family: var(--font-display);
-
-                        & h3 {
-                            font-size: 1.3rem;
-                            font-weight: 300;
-                        }
-
-                        & span {
-                            opacity: 0.8;
-                            & h6 {
-                                font-size: 1rem;
-                                font-weight: 200;
-                            }
-
-                            & p {
-                                font-weight: 200;
-                                font-size: 0.9rem;
-                            }
-                        }
-                    }
-                }
-
-                & .storageitem-dropdown {
-                    width: 100%;
-                    height: 100%;
-                    background-color: blue;
-                }
             }
         }
     }
