--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -59,7 +59,7 @@
   padding: 0.8rem;
   background-color: #fbf9f9;
   z-index: 3;
-  box-shadow: 0px 0px 25px black;
+  box-shadow: 0px 0px 5px black;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -128,205 +128,32 @@
   transform: rotate(90deg);
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout {
-  display: grid;
-  padding: 15px;
-  grid-template-columns: 1fr;
-  place-items: center;
-  row-gap: 0.2em !important;
-  width: 100%;
-  margin: 0 auto;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem {
-  width: 98%;
-  position: relative;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem input {
-  position: absolute;
-  z-index: -1;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem input:checked ~ .storageitem-dropdown {
-  height: 500px;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem input:checked ~ .storageitem-overhall {
-  border-left: solid 4px var(--off-red);
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem label {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-overhall {
-  cursor: pointer;
-  padding: 0.3rem 1.2rem;
-  min-height: 110px;
-  background: var(--dark-blue);
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-overhall .storageitem-image {
-  width: 195px;
-  height: 95%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-overhall .storageitem-info {
-  box-sizing: border-box;
-  width: 95%;
-  place-self: center;
-  color: white;
-  font-family: var(--font-display);
-  font-size: 1.4rem;
-  display: grid;
-  grid-template-columns: repeat(3, minmax(100px, 1fr));
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-overhall .storageitem-info div {
-  padding: 0.1rem 0.4rem;
-  line-height: 1.2em;
-  border-left: solid var(--off-red) 1px;
-  word-wrap: break-word;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-overhall .storageitem-info div h6 {
-  font-weight: 100;
-  font-size: 1rem;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-overhall .storageitem-info div h3 {
-  font-size: 1.5rem;
-  font-weight: 300;
-  color: var(--off-red);
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-overhall .storageitem-info div p {
-  padding: 2px 0;
-  font-weight: 300;
-  font-size: 1.4rem;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-dropdown {
-  background: var(--dark-blue);
-  height: 0px;
-  transition: height 400ms;
-  overflow: hidden;
-  padding: 0 1.5rem;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-dropdown-image {
-  width: 330px;
-  height: 450px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-rowsLayout .storageitem .storageitem-dropdown-info {
-  width: 50%;
-  height: 350px;
-  background: blue;
-  color: white;
+  height: auto;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(auto-fit, 1f);
+  grid-template-rows: repeat(auto-fit, 1fr);
   place-items: center;
-  padding: 10px;
+  padding: 10px 20px;
   row-gap: 1em;
   column-gap: 1em;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem {
+  background-color: blue;
   width: 100%;
-  height: 410px;
-  overflow: hidden;
+  height: 360px;
   position: relative;
 }
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-customizeIcon {
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .hearticon {
+  width: 30px;
+  height: 30px;
+  background-color: green;
   position: absolute;
-  width: 42px;
-  height: 42px;
-  right: 5px;
-  bottom: 5px;
-  border-radius: 50%;
-  border: solid 1px black;
+  top: 7px;
+  right: 7px;
   display: grid;
   place-items: center;
-  transition: 400ms;
-  cursor: pointer;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-customizeIcon svg {
-  height: 100%;
-  transition: 400ms;
-  color: black;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-customizeIcon:hover {
-  border: solid 1px var(--off-red);
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-customizeIcon:hover svg {
-  color: var(--off-red);
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem input {
-  cursor: cell;
-  position: absolute;
-  z-index: -999;
-  background-color: orchid;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem input:checked ~ .storageitem-container {
-  transform: translate(-50%, 0);
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem label {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  cursor: pointer;
-  background-color: transparent;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container {
-  width: 200%;
-  transform: translate(0, 0);
-  transition: transform 400ms;
-  height: 100%;
-  position: relative;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall {
-  height: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto 1fr;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-image {
-  display: block;
-  height: 280px;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info {
-  padding: 6px 0px 0px 10px;
-  color: black;
-  font-family: var(--font-display);
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info h3 {
-  font-size: 1.3rem;
-  font-weight: 300;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info span {
-  opacity: 0.8;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info span h6 {
-  font-size: 1rem;
-  font-weight: 200;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-overhall .storageitem-info span p {
-  font-weight: 200;
-  font-size: 0.9rem;
-}
-.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .storageitem-container .storageitem-dropdown {
-  width: 100%;
-  height: 100%;
-  background-color: blue;
 }
 @media screen and (max-width: 1000px) {
   .stashesOverview .storage-itemsContainer {
@@ -465,19 +292,17 @@
 }
 
 :root {
-  --main-white: #dfe3ff;
-  --dark-blue: #232538;
-  --dark-blue-light: #26273d;
-  --off-red: #6c66fb;
-  --analytics-text-color: white;
+  --main-white: #0197f6;
+  --dark-blue: #02182b;
+  --dark-blue-light: #023150;
+  --off-red: #d7263d;
+  --text-color: black;
   --font-logo: "Titan One", cursive;
   --font-display: "Lato", sans-serif;
 }
 
 body {
-  height: 99vh;
-  background-color: white;
-  overflow: hidden;
+  height: 100vh;
 }
 body .loadingspinner {
   width: 100%;
