changing layout again, made stuff. Lowkey tho
Co-authored-by: imMatheus2 <imMatheus2@users.noreply.github.com>

--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/stashstorage.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/stashstorage.scss
@@ -1,14 +1,7 @@
 .stashstorage {
-    flex: auto;
-    height: 100vh;
-    overflow-y: scroll;
-
+    flex: 0.9;
+    background-color: rgb(43, 1, 73);
+    height: 100%;
     @import './sorting';
     @import './itemsLayout';
-}
-
-@media screen and (max-width: 1000px) {
-    .storage-itemsContainer {
-        background-color: red;
-    }
 }
