--- a/stash/src/components/stashesOverview/stashesOverview.scss
+++ b/stash/src/components/stashesOverview/stashesOverview.scss
@@ -1,6 +1,8 @@
 .stashesOverview {
     width: 100vw;
+    height: 100vh;
     display: flex;
+    justify-content: space-between;
     @import './sidebar/sidebar';
     @import './stashesOverview-components//StOv-storage/stashstorage';
     @import './stashesOverview-components//StOv-stashes/stashstashes';
