--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
@@ -2,14 +2,9 @@
     &.storage-container-rowsLayout {
         height: auto;
     }
-
-    //
-    //
     //
     //
     // Card Layout
-    //
-    //
     //
     //
     &.storage-container-cardsLayout {
@@ -20,22 +15,38 @@
         padding: 10px 20px;
         row-gap: 1em;
         column-gap: 1em;
+
         & .storageitem {
-            background-color: blue;
             width: 100%;
+            background-color: indigo;
             height: 360px;
             position: relative;
 
             // heart icon in the top rigth corner
             & .hearticon {
-                width: 30px;
-                height: 30px;
-                background-color: green;
+                width: 35px;
+                height: 35px;
                 position: absolute;
                 top: 7px;
                 right: 7px;
                 display: grid;
                 place-items: center;
+
+                & svg {
+                    width: 100%;
+                    height: 100%;
+                    display: block;
+                    font-weight: 100;
+                    color: #333;
+                    opacity: 0.5;
+                }
+
+                &-filledHeart {
+                    & svg {
+                        fill: red;
+                        opacity: 1;
+                    }
+                }
             }
         }
     }
