--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_sorting.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_sorting.scss
@@ -1,23 +1,23 @@
 .storage-sorting {
     position: sticky;
     top: 15px;
-    width: 90%;
-    height: 100px;
+    width: 82%;
+    height: 90px;
     margin: 32px auto;
     padding: 0.8rem;
     background-color: #fbf9f9;
     z-index: 3;
     box-shadow: 0px 0px 5px black;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    place-items: center;
 
     & .sorting-layoutToggler {
-        float: left;
         cursor: pointer;
         width: 50px;
         height: 50px;
         background-color: var(--dark-blue);
+        position: relative;
         border-radius: 5px;
         &:hover {
             opacity: 0.8;
@@ -28,20 +28,6 @@
             opacity: 0.9;
             display: block;
             transition: height 400ms;
-        }
-
-        &.sorting-rowLayout {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-direction: column;
-            padding: 8px 0;
-
-            & span {
-                width: 80%;
-                height: 15%;
-                border-radius: 6px;
-            }
         }
 
         &.sorting-cardLayout {
@@ -71,7 +57,7 @@
         cursor: pointer;
 
         & span {
-            width: 70%;
+            width: 80%;
             height: 11%;
             background-color: var(--off-red);
             display: block;
