--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -1,16 +1,16 @@
 .stashesOverview {
   width: 100vw;
+  height: 100vh;
   display: flex;
+  justify-content: space-between;
 }
 .stashesOverview .sidebar {
   height: 100vh;
   background-color: var(--dark-blue);
-  flex: 0.2;
-  min-width: 180px;
-  overflow-x: hidden;
+  flex: 0.1;
   position: sticky;
-  top: 0;
   left: 0;
+  top: 0;
 }
 .stashesOverview .sidebar .sidebar-logo {
   cursor: pointer;
@@ -46,30 +46,30 @@
   color: var(--off-red);
 }
 .stashesOverview .stashstorage {
-  flex: auto;
-  height: 100vh;
-  overflow-y: scroll;
+  flex: 0.9;
+  background-color: #2b0149;
+  height: 100%;
 }
 .stashesOverview .stashstorage .storage-sorting {
   position: sticky;
   top: 15px;
-  width: 90%;
-  height: 100px;
+  width: 82%;
+  height: 90px;
   margin: 32px auto;
   padding: 0.8rem;
   background-color: #fbf9f9;
   z-index: 3;
   box-shadow: 0px 0px 5px black;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  place-items: center;
 }
 .stashesOverview .stashstorage .storage-sorting .sorting-layoutToggler {
-  float: left;
   cursor: pointer;
   width: 50px;
   height: 50px;
   background-color: var(--dark-blue);
+  position: relative;
   border-radius: 5px;
 }
 .stashesOverview .stashstorage .storage-sorting .sorting-layoutToggler:hover {
@@ -80,18 +80,6 @@
   opacity: 0.9;
   display: block;
   transition: height 400ms;
-}
-.stashesOverview .stashstorage .storage-sorting .sorting-layoutToggler.sorting-rowLayout {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  padding: 8px 0;
-}
-.stashesOverview .stashstorage .storage-sorting .sorting-layoutToggler.sorting-rowLayout span {
-  width: 80%;
-  height: 15%;
-  border-radius: 6px;
 }
 .stashesOverview .stashstorage .storage-sorting .sorting-layoutToggler.sorting-cardLayout {
   display: grid;
@@ -117,7 +105,7 @@
   cursor: pointer;
 }
 .stashesOverview .stashstorage .storage-sorting .toggleDropdowns span {
-  width: 70%;
+  width: 80%;
   height: 11%;
   background-color: var(--off-red);
   display: block;
@@ -140,25 +128,31 @@
   column-gap: 1em;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem {
-  background-color: blue;
   width: 100%;
+  background-color: indigo;
   height: 360px;
   position: relative;
 }
 .stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .hearticon {
-  width: 30px;
-  height: 30px;
-  background-color: green;
+  width: 35px;
+  height: 35px;
   position: absolute;
   top: 7px;
   right: 7px;
   display: grid;
   place-items: center;
 }
-@media screen and (max-width: 1000px) {
-  .stashesOverview .storage-itemsContainer {
-    background-color: red;
-  }
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .hearticon svg {
+  width: 100%;
+  height: 100%;
+  display: block;
+  font-weight: 100;
+  color: #333;
+  opacity: 0.5;
+}
+.stashesOverview .stashstorage .storage-itemsContainer.storage-container-cardsLayout .storageitem .hearticon-filledHeart svg {
+  fill: red;
+  opacity: 1;
 }
 .stashesOverview .stashesContainer {
   width: 100%;
